# rust-diesel

./: .gitignore  README.md
diesel_mysql_demo/: .env  Cargo.toml  README.md  diesel.toml
diesel_mysql_demo/src/: lib.rs  models.rs
diesel_postgresql_demo/: .env  Cargo.toml  README.md  diesel.toml
diesel_postgresql_demo/migrations/2024-12-15-085352_create_posts/: up.sql
diesel_postgresql_demo/src/: lib.rs
