[package]
name = "diesel_mysql_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["mysql"] }  # 引用mysql
dotenvy = "0.15.7"
mysqlclient-sys = "0.4.2"


[[bin]]
name = "query_posts"
path = "src/bin/query_posts.rs"
doc = false


[[bin]]
name = "insert_posts"
path = "src/bin/insert_posts.rs"
doc = false


[[bin]]
name = "update_posts"
path = "src/bin/update_posts.rs"
doc = false


[[bin]]
name = "query_by_id"
path = "src/bin/query_by_id.rs"
doc = false


[[bin]]
name = "delete_posts"
path = "src/bin/delete_posts.rs"
doc = false